# lazycomplete

./: .goreleaser.yml  Cargo.toml  README.md  go.mod  lazycomplete.go  main.go
.github/workflows/: go.yml
internal/shell/: bash.sh  elvish.elv  fish.sh  oil.sh  powershell.ps1  powershell_header.ps1  xonsh.py  xonsh_header.py  zsh.sh
src/: main.rs
