cargo-features = ["strip"]

[package]
name = "lazycomplete"
version = "0.1.0"
authors = ["rsteube <rsteube@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.15.3"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
panic = 'abort'
strip = 'symbols'
